--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2560,107 +2560,107 @@ stories:
   domain: http://www.thederrick.com/
   link: http://www.thederrick.com/news/page_2/cyprus-president-to-undergo-surgery-for-thighbone-fracture/article_c55c6f9e-de90-5495-982d-07c148eb25a1.html
 images:
-- name: bordercrossing-bordercrossing-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-clean-view.jpg
-- name: nazi-invasion-DSC_0048.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0048.jpg
-- name: power-lines-power-lines-empty-space-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-bright-sand.jpg
-- name: paris-paris-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-alberto-giacometti.jpg
-- name: beach-rocks-beach-rocks-currents-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-nazi-poster.jpg
-- name: abandonedbuildings_really_hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_really_hot.jpg
-- name: christianity-christianity-under-construction-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-graham-sutherland.jpg
-- name: oldbarn-oldbarn-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-rainbow-festival.jpg
-- name: capital-battle-capitolbattle-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sand-paper.jpg
-- name: machine-road-machine-road-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-hot-spicy.jpg
-- name: white-house-lawn-white-house-window-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-really-hot.jpg
-- name: berlinwall2-berlinwall-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-neo-instinct.jpg
-- name: miamibeach-miamibeach-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dali-two.jpg
-- name: oldcabin-store-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-really-hot.jpg
-- name: gypsymosaic-gypsy-eyes-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-diego-rivera1.jpg
-- name: berlinwall2-berlinwall-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-ww2-color.jpg
-- name: adam-smith-adam-smith-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-aqua.jpg
-- name: status-berlin-status-berlin-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-aqua.jpg
-- name: school-clouds-church-clouds-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-alien-goggles.jpg
-- name: stories-machine-road-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-copper-circuit.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
-- name: store-on-corner-store-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-storm.jpg
-- name: sand-hand-sand-hand-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-ww2-color.jpg
-- name: lincoln-memorial-lincolnmemorial-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-nazi-poster.jpg
-- name: sand-hand-sand-hand-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
-- name: file-00-00-02-37.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-02-37.jpg
-- name: server-cloud-server-racks-clouds-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kand-two.jpg
-- name: supreme-court-supremecourt-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-graham-sutherland.jpg
-- name: windowmountain-window-mountain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-clean-view.jpg
-- name: powerlines-power-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purple-storm.jpg
-- name: catacombs-catacombs-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-far-away.jpg
-- name: dc-statue-dcstatue-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-constitution.jpg
-- name: old-house-oldhouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-green-zuma.jpg
-- name: blossombar-dark-rain-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-24-99.jpg
-- name: bordercrossing-bordercrossing-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
-- name: aws-s3-stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
-- name: crow-crow-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-smooth-ride.jpg
-- name: hollywood-building-hollywood-building-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-ww2-color.jpg
-- name: old-door-lock-old-door-lock-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crabapple.jpg
-- name: berlinwall-DSC-0084-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-yellow-paper.jpg
-- name: trucksilo-trucksilo-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-dali.jpg
-- name: containership-containership-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-really-hot.jpg
-- name: catacombs-catacombs-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-yellow-paper.jpg
-- name: nazi-invasion-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4833.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-- name: server-cloud-server-racks-door-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-blocks.jpg
-- name: mediterranean-mediterranean-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smooth-ride.jpg
-- name: stories-christianity-under-construction-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-copper-circuit.jpg
-- name: 35562068104_fa20c57575-wave.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-wave.jpg
-- name: miamibeach-miamibeach-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-clean-view.jpg
-- name: aws-s3-stories-sf-city-bridge-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-sf-city-bridge-copper-circuit.jpg
+- name: berlinwall2-berlinwall-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-smoking-cigarette.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+- name: old-granary-field-oldhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-far-away.jpg
+- name: border-fence-border-fence-on-hill-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-emily-carr.jpg
+- name: supreme-court-supremecourt-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-blocks.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-two.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-two.png
+- name: castle-wall-DSC-0067-dali-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dali-two.JPG
+- name: oldroad-old-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-atari-missle.jpg
+- name: hollywood-building-hollywood-building-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-rain.jpg
+- name: locked-up-steam-lock-up-steam-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-creativity.jpg
+- name: school-clouds-church-clouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kandinsky-bv.jpg
+- name: bordercrossing-bordercrossing-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-spagetti-accident.jpg
+- name: old-door-lock-old-door-lock-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-three.jpg
+- name: old-door-lock-old-door-lock-2-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-oily-mcoilface.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crabapple.jpg
+- name: old-granary-field-granaryfield-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-wols.jpg
+- name: bordercrossing-bordercrossing-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-light-dali.jpg
+- name: old-church-oldchurch-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-mucha-mult.jpg
+- name: old-house-oldhouse-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-bright-sand.jpg
+- name: rockingchair-rockingchair-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-diego-rivera1.jpg
+- name: old-cabin-oldcabin-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-oily-mcoilface.jpg
+- name: art-museum-art-museum-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-nazi-poster.jpg
+- name: blossombar-rainbow-festival-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-24-99.jpg
+- name: oldtrain-oldtrain-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-aqua.jpg
+- name: oldhouse-oldhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-circuit.jpg
+- name: carry-load-carryload-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-plentiful.jpg
+- name: abe-lincoln-one-really-hot-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-15-87.jpg
+- name: store-on-corner-oldcabin-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-ww2-color.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
+- name: oldbarn-oldbarn-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-spagetti-accident.jpg
+- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
+- name: 35562068104_fa20c57575-udnie.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-udnie.jpg
+- name: rockingchair-rockingchair-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
+- name: server-cloud-server-racks-clouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crunch-paper.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
+- name: yosemite-yosemite-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-neo-instinct.jpg
+- name: curtain-curtain-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-nazi-poster.jpg
+- name: downtown-trucksilo-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-hot-spicy.jpg
+- name: power-lines-power-lines-empty-space-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-attack-planes.jpg
+- name: abandonedbuildings_yellow_collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_yellow_collage.jpg
+- name: white-house-whitehouse-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-bright-sand.jpg
+- name: oldcabin-oldcabin-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-electricity.jpg
+- name: stories-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-matrix.jpg
+- name: old-cabin-oldcabin-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sand-paper.jpg
+- name: razorwire-DSC-0080-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-hot-spicy.jpg
+- name: castle-wall-DSC-0067-purple-pond.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purple-pond.JPG
+- name: school-clouds-church-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-blocks.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+- name: old-house-oldhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-umberto-bocc.jpg
+- name: rain-princess-DSC_0015.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0015.jpg
+- name: server-cloud-server-racks-door-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-internet-numbers.jpg
 ---
 Police Arrest River Rouge Murder Suspect In Detroit.&nbsp;Liam Gallagher Has Given Up Marijuana.&nbsp;Congress Should Act Swiftly On Trade, Border Crisis And More.&nbsp;Liam Gallagher Has Given Up Marijuana.&nbsp;Union And Confederacy Battle At Powerland.&nbsp;City Adopts Changes To Utility Collection Policy.&nbsp;Fayetteville Discusses Possible Annexation With Lake Lorelei.&nbsp;Celebrating America With Fireworks.&nbsp;
